laravel-react and auth and more

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
     "/js/book-browser.js": "/js/book-browser.js?id=49daaf7fc63535f54286",
+    "/js/homepage.js": "/js/homepage.js?id=48dcccbaff05f83e9de6",
+    "/js/book-detail.js": "/js/book-detail.js?id=2e86a5ebbee735a99481",
+    "/js/auth.js": "/js/auth.js?id=9638f4bef810844d2db8",
     "/css/books.css": "/css/books.css?id=203ba2d873a24732f5da"
 }
