--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
         "react-dom": "^17.0.1",
         "sass": "^1.32.8",
         "sass-loader": "^10.1.1"
+    },
+    "dependencies": {
+        "moment": "^2.29.1",
+        "react-router-dom": "^5.2.0"
     }
 }
